# jetauto-ros2

./: .gitignore  AUTONOMY_PLAN.md  HIWONDER_REFERENCE.md  LICENSE  README.md  ROADMAP.md  deploy.sh  requirements.txt
scripts/: battery_check.sh  jetauto-dashboard.service  run_sim.sh  start-dashboard.sh
src/data/faces/: eithan.npz
src/jetauto_autonomy/: package.xml  setup.cfg  setup.py
src/jetauto_autonomy/config/: nav2_params.yaml  slam_params.yaml
src/jetauto_autonomy/jetauto_autonomy/: __init__.py  frontier_explorer.py  obstacle_injector.py  safety_monitor.py
src/jetauto_autonomy/launch/: autonomy.launch.py  base_bringup.launch.py  full_stack.launch.py  navigation.launch.py  perception.launch.py  slam_mapping.launch.py
src/jetauto_autonomy/maps/: test_map.pgm  test_map.yaml
src/jetauto_autonomy/scripts/: estop.sh  explore.sh
src/jetauto_autonomy/test/: test_frontier.py
src/jetauto_dashboard/: package.xml  setup.cfg  setup.py
src/jetauto_dashboard/config/: dashboard_params.yaml
src/jetauto_dashboard/jetauto_dashboard/: dashboard_node.py
src/jetauto_dashboard/launch/: dashboard.launch.py
src/jetauto_dashboard/static/: index.html
src/jetauto_dashboard/test/: test_dashboard.py
src/jetauto_faces/: README.md  package.xml  setup.cfg  setup.py
src/jetauto_faces/config/: face_params.yaml
src/jetauto_faces/data/faces/: alon.npz  eithan.npz  lucinda.npz  via.npz
src/jetauto_faces/jetauto_faces/: enroll_face.py  enrollment_node.py  face_recognition_node.py
src/jetauto_faces/launch/: enrollment.launch.py  face_recognition.launch.py
src/jetauto_faces/standalone/: README.md  demo_recognition.py
src/jetauto_faces/test/: test_face_recognition.py
src/jetauto_msgs/: CMakeLists.txt  package.xml
src/jetauto_msgs/msg/: DetectedObject.msg  DetectedObjectArray.msg  RecognizedFace.msg  RecognizedFaceArray.msg
src/jetauto_sim/: download_images.sh  manifest.json  package.xml  setup.cfg  setup.py
src/jetauto_sim/jetauto_sim/: sim_node.py
src/jetauto_sim/launch/: sim.launch.py
src/jetauto_tts/: package.xml  setup.cfg  setup.py
src/jetauto_tts/config/: tts_params.yaml
src/jetauto_tts/jetauto_tts/: tts_node.py
src/jetauto_tts/launch/: tts_launch.py  tts_only.launch.py
src/jetauto_tts/test/: test_tts.py
src/jetauto_vision/: package.xml  setup.cfg  setup.py
src/jetauto_vision/config/: caption_params.yaml  vision_params.yaml
src/jetauto_vision/jetauto_vision/: caption_node.py  detector_node.py
src/jetauto_vision/launch/: caption_launch.py  vision_launch.py
src/jetauto_vision/test/: test_detector.py
src/jetauto_voice/: package.xml  setup.cfg  setup.py
src/jetauto_voice/jetauto_voice/: intent_mapper.py  voice_commander_node.py  voice_control_node.py
src/jetauto_voice/launch/: voice_control.launch.py
src/jetauto_voice/test/: test_intent_mapper.py  test_voice_commander.py
